prover-ray/zkcdriver/testdata/synced/invalid/basic_08.zkc
//error:3:12-13:unexpected token
fn f(x:u8) -> (r:u8) {
  r = (x + )
  return
}
